--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Service for Loan Management System",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "format": "npx prettier --write ."
@@ -24,9 +24,11 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "supertest": "^6.3.3"
   },
   "husky": {
     "hooks": {
